updated home page

--- a/The Landing Page/index.html
+++ b/The Landing Page/index.html
@@ -8,20 +8,16 @@
   <title>The Landing Page</title>
 </head>
 <body>
-  <div>
+  <div class="content">
     <nav>
-      <img src="https://assets-prd.ignimgs.com/2022/07/15/jeopardy-1657926877160.png?width=750"
-    </nav>
-    <nav>
-      <h1><a href="#Play" class="btn">Play</a></h1>
+      <img src="https://assets-prd.ignimgs.com/2022/07/15/jeopardy-1657926877160.png?width=750">
+      <link rel="stylesheet" href="./rounds.css"
+      <h1><a href="#Play" class="btn" <link href="http://127.0.0.1:5500/Projects/Unit1-Jeopardy-Student/firstRound.html">Play</a></h1>
       </nav>
     </div>
-  <div>
-    <footer>
-      "Upright Unit 1 Project Copyright 2023"
-    </footer>
-  </div>
-
   
+  <footer>
+    "Upright Unit 1 Project Copyright 2023"
+  </footer>
 </body>
 </html>
